--- a/templates/base.html
+++ b/templates/base.html
@@ -141,11 +141,18 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
+              <a class="nav-link" href="/new_current">Current Affairs Test</a>
+            </li>
+             <li class="nav-item">
+              <a class="nav-link" href="/new_sector">Sector News Test</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="/">Current Affairs</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/market_news">Market News</a>
             </li>
+           
             <li class="nav-item">
               <a class="nav-link" href="/sector_news">Sector News</a>
             </li>
