--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css"
     />
+    
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <!-- SweetAlert2 CDN -->
 
@@ -154,7 +155,7 @@
             </li>
            
             <li class="nav-item">
-              <a class="nav-link" href="/sector_news">Sector News</a>
+              <a class="nav-link" href="/new_sector">Sector News</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/calendar">Calendar</a>
